sections/02-airline-app-deployment/manifests/airline-k8-deployment/booking-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-api
  namespace: booking-api
  labels:
    app.kubernetes.io/name: booking-api
    app.kubernetes.io/tier: backend
    cost-center: booking-engine
    environment: prod
    # Missing: owner, criticality
spec:
  replicas: 1
  selector:
    matchLabels:
      app: booking-api
  template:
    metadata:
      labels:
        app: booking-api
    spec:
      containers:
      - name: booking-api
        image: nginx:alpine
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "256Mi"
            cpu: "250m"
