sections/02-airline-app-deployment/manifests/airline-k8-deployment/booking-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: booking-api
  namespace: booking-api
  labels:
    app.kubernetes.io/name: booking-api
    cost-center: booking-engine
spec:
  selector:
    app: booking-api
  ports:
  - port: 8080
    targetPort: 8080
  type: ClusterIP
